<resources>
    <string name="app_name">Quick Waiter</string>

    <!-- login -->
    <string name="btnLogin">Log In</string>
    <string name="password_hiht">* * * * *</string>
    <string name="waiter_login">Waiter Login</string>
    <string name="btnExit">Exit</string>
    <string name="btnUpdateData">Data Update</string>
    <string name="copyright">© 2018 Quick Waiter. [Ver.5.2]</string>

    <!-- main -->
    <string name="no_items">No Items!</string>
    <string name="label_table">TABLE -</string>
    <string name="button_sendorder">Send Order</string>
    <string name="button_choosetable">Choose Table</string>
    <string name="hint_submenu">Items</string>
    <string name="qty_default_text">1</string>

    <!-- dialog -->
    <string name="ip_address">IP Address</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="btnok">OK</string>
    <string name="btncancel">Cancel</string>
    <string name="database">Database Name</string>
    <string name="chk_waiter">Waiter</string>
    <string name="chk_tabletype">Table Type</string>
    <string name="chk_table">Table</string>
    <string name="chk_item">Item</string>
    <string name="chk_submenu">Sub Menu</string>
    <string name="chk_mainmenu">Main Menu</string>
    <string name="chk_taste">Taste</string>
    <string name="chk_taste_multi">Taste Multi</string>
    <string name="chk_all">All</string>
    <string name="chk_systemsetting">System Setting</string>
    <string name="chk_featuresetting">Feature Setting</string>
    <string name="chk_printersetting">Printer Setting</string>
    <string name="chk_stype">SType</string>
    <string name="chk_slip_format">Slip Format</string>

    <!-- view order -->
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="service_charges">Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="sub_total">Sub Total</string>

    <!-- table -->
    <string name="lbl_using_tables">Occupied Table</string>
    <string name="lbl_free_tables">Empty Table</string>

    <!-- customer entry -->
    <string name="button_edit_customerinfo">Edit</string>

    <!-- menu -->
    <string name="menu_setting">Setting</string>
    <string name="menu_server_property">Server Property</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_bill">Bill</string>
    <string name="menu_view_order">View Order</string>
    <string name="menu_customer_entry">Customer Entry</string>
    <string name="menu_table_booking">Booking</string>
    <string name="menu_open_order_waiter">Open Order (Waiter)</string>
    <string name="menu_open_order_kitchen">Open Order (Kitchen)</string>
    <string name="menu_change_table">Change Table</string>

    <!-- start -->
    <string name="button_import">Import Data</string>

    <!-- splash -->
    <string name="label_company_name">[V5.2] Developed by Blue Ocean Strategy</string>

    <string name="add">Add</string>
    <string name="item_sub_group">Item Sub Group</string>
    <string name="item_sub">Item Sub</string>
    <string name="search">Search</string>
    <string name="add_item_sub">Add Item Sub</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="check_type">Check Type</string>
    <string name="allow_single">Allow Single Check</string>
    <string name="allow_multi">Allow Multi Check</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hide_commercial_tax">Hide Commercial Tax</string>
    <string name="add_taste">Add Taste</string>
    <string name="remove_item">Remove Item</string>
    <string name="request_bill">Request Bill</string>
</resources>
