<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bosictsolution.quickwaiter.ItemSubSetupActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <Button android:id="@+id/btnItemSubGroupModule"
                android:text="@string/item_sub_group"
                style="@style/styleSetupModuleButton"/>
            <Button android:id="@+id/btnItemSubModule"
                android:text="@string/item_sub"
                style="@style/styleSetupModuleButton"/>
            <Button android:id="@+id/btnItemModule"
                android:text="@string/item"
                style="@style/styleSetupModuleButton"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        android:orientation="vertical">

        <LinearLayout android:id="@+id/layoutSetupItemSubGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone"
            android:gravity="right"
            tools:visibility="visible">

            <Button android:id="@+id/btnAddNewItemSubGroup"
                style="@style/styleSetupAddButton" />

        </LinearLayout>

        <LinearLayout android:id="@+id/layoutSetupItemSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone"
            android:gravity="right">

            <Button android:id="@+id/btnAddNewItemSub"
                style="@style/styleSetupAddButton" />

        </LinearLayout>

        <LinearLayout android:id="@+id/layoutSetupItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

        </LinearLayout>

        <ListView android:id="@+id/lvSetup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray"></ListView>

    </LinearLayout>

</LinearLayout>
